--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.1.7",
     "fs-extra": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
